2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewLane.aspx.cs: Removed the abort/pause/resume step commands, and add an
	abort revision command.

2010-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx[[.designer].cs]: Add UI to edit the commit_filter field for
	a lane.

	* EditLaneFile.aspx: Add documentation about new environment variables for the
	build environment.

2010-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx: Add documentation about BUILD_HOST and BUILD_WORK_HOST.
	Fixes #520774.

2010-06-11  Andrew Jorgensen  <ajorgensen@novell.com>

	* EditLane.js:
	* EditLane.aspx.cs: Add upload_files and working_directory
	  attributes for a command

2010-06-08  Andrew Jorgensen  <ajorgensen@novell.com>

	* ViewHtmlReport.aspx.cs: Send Accept-Encoding when
	  downloading

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewTable.aspx.cs: Make the headers correctly ordered.

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewTable.js:
	* ViewTable.aspx.cs: Make the 'Clear all revisions' link actually work.

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewTable.aspx.cs: Add a Duration column.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Master.master:
	* ViewHtmlReportEmbedded.aspx: Need to set height too.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewLane.aspx.cs: Make the html report embedded, and don't get hidden files
	from the server, we don't need them.

	* ViewHtmlReportEmbedded.aspx[.designer][.cs]: Added.

	* MonkeyWrench.Web.UI.csproj: Updated with new files.

	* Master.master: Change layout to make the main part in the middle use as much
	as possible of the available screen space.

	* EditLaneFile.aspx: Don't validate the request, the file may contain all
	sorts of characters.

2010-02-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ReportCommit.aspx.cs: svn server has gotten a new ip. This should
	really go into the configuration file.
