@@ -1,0 +1,3 @@
+﻿<%@ Page Language="C#" AutoEventWireup="true" Inherits="ReportGitHubCommit" Codebehind="ReportGitHubCommit.aspx.cs" %>
+
+
